# zk2-bench-b1-lite

./: Cargo.toml  LICENSE  README.md  artifact_schema_supplement.md  results.md  wrapper_note_option2.tex
post_manuscript_fullbench/: Cargo.toml  README.md
post_manuscript_fullbench/benches/external_h2w_compare/: a_secure_s16.json  a_secure_s8.json  b_note_s16.json  (+4 more)
post_manuscript_fullbench/certificates/: h2dq_backend_instance.json  public_certificate.json
post_manuscript_fullbench/docs/: capacity_frontier_scope.md  external_h2w_compare.md  fullbench_local_fixedk.md  fullbench_local_fixedk_real_high.md  fullbench_local_fixedk_real_mid.md  fullbench_local_fixedk_real_small.md  halo2_integration_example.md  k_jump_capacity_sweep.md  next_headline_rerun_spec.md  provenance_note.md  repeat_boundary_k17_medium.md  repeat_boundary_k17_s16.md  repeat_boundary_k17_s32.md  repeat_boundary_k17_small.md  repeat_boundary_k18_s4520.md  repeat_boundary_k18_s4520_r3.md  repeat_local_k13_public.md  repeat_standard_k17_medium.md  repeat_standard_k17_s16.md  repeat_standard_k17_s32.md  repeat_standard_k17_small.md  results_schema.json  security_equivalence_checklist.md  wrapper_level_parity_requirements.md
post_manuscript_fullbench/examples/: halo2_integration_demo.rs
post_manuscript_fullbench/scripts/: check_public_certificate.py  h2dq_cert.py  h2dq_lint.py  local_fixedk_fullbench.py  local_repeat_bench.py  local_sweep.py  plot_fullbench.py  run_ab_bench.py  run_external_compare.py  scale_search.py
post_manuscript_fullbench/src/: integration.rs  lib.rs  shared_inputs.rs
(+152 files in other folders)
